Fixed: unexpected line break on korean words.

--- a/front/static/front/bootstrap/css/bootstrap-custom.css
+++ b/front/static/front/bootstrap/css/bootstrap-custom.css
@@ -1,170 +1,8 @@
-html{
-  min-height: 100%;
-  height: 100%;
-
-}
-
-body {
-  height: 94%;
-  min-height: 94%;
-}
-.container {
-  min-height: 80%;
-}
-body {
-  background-color: #EEEEEE;
-}
-body:hover {
-  background-color: rgba(240,240,240,0.5)
-}
-
-h3 {
-  font-weight: bolder;
-}
-/* navigation */
-div.navigation-wrapper {
-  height: 200px;
-  background-color: rgba(80, 80, 80,0.9);
-  position: relative;
-  box-shadow: 10px 1px 1 rgb(37, 37, 37)
-  border-bottom: 1px solid rgb(2,2,2)
-}
-
-div.navigation-wrapper:hover {
-  background-color: rgb(80,80,80);
-}
-
-div.navigation {
-  color: #FFFFFF;
-  box-shadow: 0 0 0;
-}
-
-.base-reicp-box:hover {
-  background-color: rgba(250,250,250,0.8);
-}
-
-span.input-group-addon.base-mail-btn:hover {
-  background-color: rgba(250,250,250,0.8);
-}
-/* end navigation */
-
-
-div.mail-form{
-  padding-top: 20px;
-  padding-bottom: 30px;
-}
-
-div.sh8email-title {
-  color: #FFFFFF;
-  padding-right: 10px;
-  font-family:sans-serif;
-  font-weight:bolder;
-  text-align: right;
-
-}
-
-div.mail-input-box {
-  text-align: right;
-  float: center;
-  min-width: 160px;
-  max-width: 200px;
-}
-
-
-
-div.sh8email-content{
-  position: relative;
-  top: -120px;
-  background-color: rgb(255, 255, 255);
-  border-radius: 15px 50px;
-
-}
-
-div.nomail {
-  padding-top: 30px;
-  padding-left: 30px;
-  font-size: 30px;
-  min-height: 300px;
-}
-
-h1{
-    font-family: 'MoolBoran', 'Nanum Gothic', '나눔 고딕';
-    font-weight: bolder;
-}
-
-div.detail-content {
-  min-height: 600px;
-}
-
-legend{
-    border-color: lightslategray;
-}
-/* about list */
-li.maillist-a-row {
-
-  border-radius: 15px 50px;
-  color: black;
-}
-li.maillist-a-row:hover {
-  background-color: rgba(20, 20, 20, 0.5);
-  color: white;
-  box-shadow: 0 1px 0 rgb(2,2,2)
-}
-.maillist-content-wrapper {
-  width: 100%;
-  min-height: 100%;
-  background-color: rgb(40, 40, 40)
-  border-radius: 15px 50px;
-  margin-bottom: 25px;
-}
-
-.maillist-content-list-group {
-  border-radius: 15px 50px;
-  background-color: white;
-  margin-top: 20px;
-}
-
-.maillist-content-sender{
-  font-weight:bold;
-}
-
-.btn.back-btn{
-    font-family: 'MoolBoran', 'Nanum Gothic', '나눔 고딕';
-}
-.btn.back-btn:hover {
-  background-color: rgba(190, 190, 190, 0.5)
-}
-/* end about list */
-
-.title {
-    text-align:center;
-    align-items: center;
-}
-
-.padding{
-    padding:10px;
-}
-
-
-footer {
-  min-height: 50px;
-  background-color: rgb(74, 74, 74);
-}
-
-.footer-copyright{
-  font-size: 24px;
-  vertical-align: middle;
-
-}
-span.label {
-
-}
-
-/* ------- New design ---------*/
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 html, body {
   font-family: 'Nanum Gothic', sans-serif;
+  word-break: keep-all; /* 한글 띄어쓰기를 경계로 줄바꿈. */
 }
 
 .top-margin-10em {
